funcion reset del dinero

--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
         ></div>
         <img src="img/cajero.png" alt="cajero" ondrop="drop(event)"
         ondragover="allowDrop(event)" />
-        
+      <button class="button" onclick="reset()">retirar</button>
+
       </div>
+
     </div>
 
     <script src="js/main.js"></script>
