ajustar caja registradora y el marcador dinero

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         ></div>
         <img src="img/cajero.png" alt="cajero" ondrop="drop(event)"
         ondragover="allowDrop(event)" />
-      <button class="button" onclick="reset()">retirar</button>
+      <button class="button" onclick="reset()">Retirar</button>
 
       </div>
 
