continuando con la función de recuento de dinero

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="button" onclick="reset()">Retirar</div>
         
         
-       <!-- <table class="styled-table" id="tabla-recuento">   
+        <table class="styled-table" id="tabla-recuento">    
          <thead>
            <tr>
              <th>TIPO</th>
@@ -148,7 +148,7 @@
              <td><img src="img/5_euro_cent.svg"
                alt=""
                class="picture-table" /></td>
-             <td></td>
+             <td id="cantidad-coin5"></td>
              <td><img src="img/2euro.svg"
                alt=""
                class="picture-table" /></td>
